--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -48,12 +48,12 @@ A tabela 1 apresenta um comparativo dos recursos disponibilizados na arquitetura
 	\centering
 	\begin{tabular}{|c|c|c|c|c|c|}
 		\hline
-		Recurso & Este trabalho & CReAMA & MoCA & \begin{tabular}[c]{@{}c@{}}Trabalho de Jauri com\\ SenchaTouch e PhoneGap\end{tabular} & \begin{tabular}[c]{@{}c@{}}Trabalho de Lisandro\\ utilizando o Xamarin.Forms\end{tabular} \\ \hline
+		Recurso & Este trabalho & CReAMA & MoCA & \begin{tabular}[c]{@{}c@{}}Trabalho de Jauri com\\ SenchaTouch e PhoneGap\end{tabular} & \begin{tabular}[c]{@{}c@{}}Trabalho de Lisandro\\ utilizando Xamarin.Forms\end{tabular} \\ \hline
 		\begin{tabular}[c]{@{}c@{}}Provê suporte multiplataforma\\ Android e iOS\end{tabular} & Sim & Não & Não & Sim & Sim \\ \hline
-		Provê suporte a plataforma desktop & Sim & Não & Não & Não & Não \\ \hline
+		\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ plataforma desktop\end{tabular} & Sim & Não & Não & Não & Não \\ \hline
 		\begin{tabular}[c]{@{}c@{}}Provê suporte a recursos\\ extensíveis através de plugins\end{tabular} & Sim & Não & Não & Não & Não \\ \hline
 		\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de rede (HTTP), banco de dados e UI\end{tabular} & Sim & Sim & Sim & Sim & Sim \\ \hline
-		Provê suporte a reuso de componentes & Sim & Sim & Sim & Sim & Sim \\ \hline
+		\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim & Sim & Sim & Sim \\ \hline
 		\begin{tabular}[c]{@{}c@{}}Provê suporte a comunicação\\ entre objetos através de eventos\end{tabular} & Sim & Não & Sim & Sim & Sim \\ \hline
 	\end{tabular}
 	\centering
