--- a/sections/1-introducao.tex
+++ b/sections/1-introducao.tex
@@ -31,7 +31,7 @@ Este trabalho teve como objetivo o projeto, implementação e avaliação de uma
 %--------------------------%
 Para desenvolver este trabalho, foi utilizado o Qt, ele dispõe de APIs que facilitaram o desenvolvimento e o atendimento dos requisitos funcionais da arquitetura, além do QML, que é a linguagem implementada nos componentes reusáveis e deve ser utilizada na construção de objetos de \textit{UI} pelos plugins.\par
 
-Para avaliar a arquitetura proposta, foi desenvolvido duas versões de um aplicativo móvel, sendo uma versão baseada na arquitetura descrito neste trabalho e a outra sem utilizar a arquitetura. Após finalizar o desenvolvimento das duas versões, foram extraídas algumas métricas dos dois modelos com o objetivo de validar os benefícios em utilizar a arquitetura proposta neste trabalho. As métricas definidas para avaliação foram: número de linhas de código implementado e densidade de bugs encontrado em cada versão. Para complementar a avaliação, foi extraído uma lista de outros aspectos destacando detalhes observados do desenvolvimento de cada versão do aplicativo.
+Para avaliar a arquitetura proposta neste trabalho, foi desenvolvido duas versões de um aplicativo móvel, sendo uma versão baseada nesta arquitetura e a outra versão sem utilizá-la. Após finalizar o desenvolvimento das duas versões, foram extraídas algumas métricas dos dois modelos com o objetivo de destacar os benefícios de utilizar a arquitetura proposta neste trabalho. As métricas definidas para avaliação foram: número de linhas de código implementado e densidade de bugs encontrado em cada versão. Para complementar a avaliação, foi extraído uma lista de outros aspectos destacando detalhes observados do desenvolvimento de cada versão do aplicativo.
 
 %--------------------------%
 %* Retórica *%
